[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/modules/ShootingModule.gd" type="Script" id=1]

[node name="ShootingModule" type="Node2D"]
script = ExtResource( 1 )

[node name="ExitPoint" type="Node2D" parent="."]
position = Vector2( 15, 0 )

[node name="DelayTimer" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 15, 0 )
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
